# Distributed-Logging-System

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Central Logger/: CentralLogger.cpp  CentralLogger.vcxproj  CentralLogger.vcxproj.filters
Central Logger/core/: ConfigEditor.cpp  ConfigEditor.h  Log.cpp  Log.h  LogLevel.cpp  LogLevel.h
Central Logger/queue/: BaseQueue.h  LogDLQueue.h  LogPriorityQueue.h
Central Logger/sink/: ConsoleSink.h  FileSink.h  ISink.h  SinkFactory.h
Central Logger/thread/: BaseThreadWorker.h  LogWriterThreadWorker.h  MQReaderThreadWorker.h  ThreadWorkerPool.h
app/: main.cpp
include/mylib/: main.hpp
src/: main.cpp
tests/: test_hello.cpp
